--- a/vues/style.css
+++ b/vues/style.css
@@ -3,22 +3,24 @@ html, body, #corps {
 }
 
 body {
+	font-family: "Times New Roman";
+	background-color: #f7f7f7;
 	min-width: 240px;
 	margin: 0;
 	word-wrap: break-word;
 }
 
 #corps {
-	background: white;
+	max-width: 800px;
 	min-height: 300px;
 	margin: auto;
-	padding-left: 5px;
-	padding-right: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 #menu {
 	margin: auto;
-	background: #469A38;
+	background: #4CAF50;
 	color: white;
 	text-transform: uppercase;
 	text-align: center;
@@ -41,7 +43,7 @@ body {
 
 a {
 	text-decoration: none;
-	color: #4169E1;
+	color: #2196F3;
 }
 
 form {
@@ -53,24 +55,27 @@ label {
 	margin-bottom: 5px;
 }
 input, textarea {
+	background: white;
 	width: 100%;
 	padding: 5px;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	border: 1px solid black;
+	border: 0.5px solid grey;
 	-webkit-appearance: none;
-	border-radius: 0;
+	border-radius: 0px;
 }
 input[type=submit] {
+	text-transform: uppercase;
+	border: 0;
+	background: #2196F3;
 	color: white;
-	background: #469A38;
 	font-weight: bold;
 	height: 30px;
 }
 
 h1, h2, h3 {
-	color: #469A38;
+	color: #2196F3;
 	text-align: center;
 }
 
@@ -78,7 +83,7 @@ h1, h2, h3 {
 	color: red;
 }
 .succes {
-	color: #469A38;
+	color: #4CAF50;
 }
 .erreur, .succes {
 	text-align: center;
@@ -86,28 +91,35 @@ h1, h2, h3 {
 }
 
 .diffusion {
-	border: 1px solid grey;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	background-color: white;
+	border: 0.5px solid grey;
+	box-shadow: 0px 4px 8px 0px #999595;
 }
+
 .diffusion .titreDiffusion {
+	border-bottom: 0.5px solid grey;
 	font-weight: bold;
 	display: block;
-	background: #B0B5B4;
 	padding: 7px;
 }
 .diffusion .infoDiffusion {
 	display: block;
-	padding: 7px;
-}
-.diffusion a {
-	color: inherit;
+	padding: 15px 7px 7px 7px;
 }
 
 .message {
-	border: 1px solid grey;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	background-color: white;
+	border: 0.5px solid grey;
+	box-shadow: 0px 4px 8px 0px #999595;
 }
 .message .infoMessage {
+	background: #EEEEEE;
+	border-bottom: 0.5px solid grey;
 	display: block;
-	background: #B0B5B4;
 	padding: 7px;
 }
 .message .infoMessage .dateMessage {
@@ -117,6 +129,7 @@ h1, h2, h3 {
 .message .contenuMessage {
 	display: block;
 	padding: 7px;
+	min-height: 30px;
 }
 .centre {
 	text-align: center;
@@ -127,12 +140,12 @@ img, iframe {
 }
 
 .envoye {
-	background: green;
+	background: #2196F3;
 	color: white;
 	margin-left: 20%;
 }
 .recu {
-	background: #B0B5B4;
+	background: #BDBDBD;
 	margin-right: 20%;
 }
 .envoye, .recu {
@@ -151,14 +164,15 @@ select.destinataire {
 }
 
 table {
-    border-collapse: collapse;
+	border: 0.5px solid grey;
     width: 100%;
 }
 th {
     min-width: 30px;
 }
 td, th {
-    border: 1px solid grey;
+	background: white;
+    border: 0.5px solid grey;
     padding: 5px;
 }
 td{
